styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    background-color: #0f172a;
    scroll-behavior: smooth;
  }
}

@layer components {
  .bg-custom {
    background: radial-gradient(120% 80% at bottom, #f8fafc 50%, #111827 50.1%);
    background-size: cover;
    min-height: 100vh;
  }
}

